--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.0.3
+django-cors-headers==3.1.1
 djangorestframework==3.11.0
 drf-yasg==1.17.1
 gunicorn==20.0.4
