--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 asgiref==3.2.3
 astroid==2.3.3
+cached-property==1.5.1
 certifi==2019.11.28
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.0.3
 django-cors-headers==3.1.1
+django-filter==2.2.0
+django-url-filter==0.3.15
 djangorestframework==3.11.0
 drf-yasg==1.17.1
+enum-compat==0.0.3
 gunicorn==20.0.4
 idna==2.9
 inflection==0.3.1
