--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,18 @@ certifi==2019.11.28
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
-Django==3.0.3
+Django==2.2.8
 django-cors-headers==3.1.1
 django-filter==2.2.0
+django-jet==1.0.8
 django-url-filter==0.3.15
 djangorestframework==3.11.0
 drf-yasg==1.17.1
 enum-compat==0.0.3
+feedparser==5.2.1
+google-api-python-client==1.4.1
 gunicorn==20.0.4
+httplib2==0.18.1
 idna==2.9
 inflection==0.3.1
 isort==4.3.21
@@ -21,12 +25,16 @@ Jinja2==2.11.1
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+oauth2client==4.1.3
 packaging==20.1
 Pillow==7.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pylint==2.4.4
 pyparsing==2.4.6
 pytz==2019.3
 requests==2.23.0
+rsa==4.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
 six==1.14.0
