--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - ./static/:/code/static/
       - ./media/:/code/media/
     environment:
-      - VIRTUAL_HOST=localhost,35.226.188.237
+      - VIRTUAL_HOST=localhost,35.226.188.237,mars.se-pro.site
       - VIRTUAL_PORT=8000
       - DEBUG=False
 
