--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,3 +39,5 @@ services:
       - VIRTUAL_HOST=localhost,35.226.188.237,mars.se-pro.site
       - VIRTUAL_PORT=8000
       - DEBUG=False
+    depends_on: 
+      - postgres
