--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==2.2.8
+psycopg2_binary==2.8.6
 django-cors-headers==3.1.1
 django-filter==2.2.0
 django-jet==1.0.8
