--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,12 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==2.2.8
-psycopg2_binary==2.8.6
 django-cors-headers==3.1.1
 django-filter==2.2.0
 django-jet==1.0.8
 django-url-filter==0.3.15
 djangorestframework==3.11.0
+djangorestframework-simplejwt==5.0.0
 drf-yasg==1.17.1
 enum-compat==0.0.3
 feedparser==5.2.1
@@ -28,10 +28,10 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 oauth2client==4.1.3
 packaging==20.1
-Pillow==7.0.0
+psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pylint==2.4.4
+PyJWT==2.3.0
 pyparsing==2.4.6
 pytz==2019.3
 requests==2.23.0
@@ -40,7 +40,6 @@ ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
 six==1.14.0
 sqlparse==0.3.0
-typed-ast==1.4.1
 uritemplate==3.0.1
 urllib3==1.25.8
 wrapt==1.11.2
