--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ django-filter==2.2.0
 django-jet==1.0.8
 django-url-filter==0.3.15
 djangorestframework==3.11.0
-djangorestframework-simplejwt==5.0.0
+djangorestframework-simplejwt
 drf-yasg==1.17.1
 enum-compat==0.0.3
 feedparser==5.2.1
